--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
 <h1>Kraven - O Caçador | Novo Trailer Dublado</h1>
 
-<p>https://youtu.be/KHKvdPGQsTY?si=_JKSl_AxZLrxMUM5</p>
-
+<iframe width="560" height="315" src="https://youtu.be/KHKvdPGQsTY?si=_JKSl_AxZLrxMUM5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
