--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=glsPTx6Va_Y"
+            <iframe width="560" height="315" src="https://youtu.be/glsPTx6Va_Y?si=g28-1qaKb9gxSpMV"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
