--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ p {
     <section class="chamada">
         <div class="chamada-texto">
             <h1>Moana 2 </h1>
-            <p>#Moana 2/p>
+            <p>#Moana 2</p>
         </div>
 
         <div>
